2003-12-08  Michael Meeks  <michael@ximian.com>

	* Version 2.5.1

	* bonobo/bonobo-control.c (bonobo_control_do_popup_full),
	(bonobo_control_do_popup_path): split out / add a more
	useful API variant.

2003-12-05  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* bonobo/bonobo-file-selector-util.c: (response_cb),
	(create_gtk_selector): Replace GtkFileSelection with
	GtkFileChooser.

	* samples/compound-doc/container/container-filesel.c:
	(container_request_file):
	* samples/compound-doc/container/container-filesel.h:
	* samples/compound-doc/container/container-menu.c:
	(load_response_cb), (save_response_cb), (verb_FileSaveAs_cb),
	(verb_FileLoad_cb): ditto.

2003-12-06  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): add keys test.

	* bonobo/bonobo-ui-engine.c
	(impl_emit_verb_on, impl_emit_event_on): inhibit
	event / verb emission on insensitive command nodes,
	fixes keybindings problem; thanks to Chris Toshok.
	
	* bonobo/bonobo-control.c (create_plug):
	emit 'plug_created' signal.
	(bonobo_control_get_plug): expose and document.

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am (DISTCLEANFILES): add .

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Version 2.4.1

2003-10-29  Steve Chaplin  <stevech1097@yahoo.com.au>

	* configure.in: add setup for PKG_CONFIG,
	fixing configure bug.

2003-10-08  Mark McLoughlin  <mark@skynet.ie>

	* COPYING.LIB: added LGPL. COPYING is GPL.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-09-28  Gediminas Paulauskas  <menesis@delfi.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2003-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-sync-menu.h:
	* bonobo/bonobo-ui-sync-toolbar.h: Added missing
	prototypes to get rid of warnings. Fixes bug #122757.

2003-09-15  Martin Kretzschmar  <m_kretzschmar@gmx.net>

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build)
	(impl_bonobo_ui_sync_menu_build_placeholder): use